[package]
name = "tooltip"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]



[patch.crates-io]
yew = {git = "https://github.com/yewstack/yew.git"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
bounce = "0.9.0"
web-sys = { version = "0.3.70", features = ["HtmlInputElement", "Element", "DomRect", "Window"] }
wasm-bindgen = "=0.2.93"

